--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -620,3 +620,55 @@ body {
   background-color: transparent;
   border: transparent;
 }
+
+/* edit profile popup */
+.popupOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popupContent.editProfilePopup {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 400px;
+  max-width: 80%;
+  position: relative;
+}
+
+.closeIcon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
+  color: #000;
+}
+
+.closeIcon:hover {
+  color: #000;
+}
+.editProfilePopup form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+.editProfilePopup label {
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.editProfilePopup input {
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid #e1e7ff;
+  border-radius: 50px;
+}
