--- a/src/components/CardSelector/CardSelector.module.css
+++ b/src/components/CardSelector/CardSelector.module.css
@@ -93,8 +93,8 @@
 .cardContent svg {
   background-color: #fff;
   padding: 2px;
-  width: 16px;
-  height: 16px;
+  width: 14px;
+  height: 14px;
   border-radius: 20px;
   margin-left: 10px;
 }
@@ -115,9 +115,50 @@
   align-items: center;
   margin-top: 10px;
 }
+.description_tags_wrapper {
+  background-color: rgb(247, 249, 253);
+  border-radius: 20px;
+}
 .tagsItemsCards .cardContent {
   flex-direction: row;
+  align-items: center;
+  background-color: rgb(247, 249, 253);
+  border-radius: 50px;
+  padding: 10px;
+  gap: 15px;
 }
-.description_tags_wrapper {
-  background-color: #000;
+.tags_card_title_wrapper {
+  margin-top: 30px;
+}
+.description_tags_wrapper .card.selected .cardContent {
+  background-color: #fff;
+}
+.description_tags_wrapper .card:hover h5 {
+  color: #000;
+}
+.description_tags_wrapper .card:hover {
+  background-color: #fff;
+}
+.description_tags_wrapper .card {
+  border: 1px solid #edf0f7;
+}
+.description_tags_wrapper .card.selected {
+  border: 1px solid rgb(118, 232, 249);
+}
+.tagsItemsCards {
+  padding: 0;
+  width: fit-content;
+}
+.description_tags_wrapper .cardSelectorWrapper {
+  padding: 30px;
+}
+.description_tags_wrapper .cardContent svg {
+  margin-right: 10px;
+  margin-left: 0px;
+}
+.description_tags_wrapper .cardSelector_aiPicks {
+  margin-top: 0;
+}
+.description_tags_wrapper .card.selected .cardContent svg {
+  background-color: rgb(247, 249, 253);
 }
