--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -34,7 +34,7 @@ body {
 .tabs_lists,
 .tabContent {
   background-color: #fff;
-  padding: 30px;
+  /* padding: 30px; */
   border-radius: 15px;
 }
 .tabs_lists {
@@ -46,6 +46,8 @@ body {
   flex-direction: column;
   align-items: self-start;
   gap: 15px;
+  border-top: 1px solid #e1e7ff;
+  padding: 30px;
 }
 
 .tabButton {
@@ -56,6 +58,7 @@ body {
   font-size: 14px;
   background-color: #fff;
   padding: 0;
+  padding: 10px 20px 10px 10px;
 }
 
 .tabButton.active {
@@ -63,7 +66,6 @@ body {
   color: #001f3e;
   font-weight: 600;
   border-radius: 40px;
-  padding: 10px 20px 10px 10px;
 }
 
 .tabContent {
@@ -75,6 +77,7 @@ body {
   /* display: flex; */
   align-items: center;
   margin-bottom: 20px;
+  padding: 30px;
 }
 .profileDetails {
   position: relative;
@@ -87,7 +90,7 @@ body {
   top: -5px;
   background: #fff;
   border-radius: 50px;
-  padding: 3px;
+  padding: 1px;
   width: 15px;
 }
 .mailNotifications p {
@@ -153,13 +156,11 @@ body {
 .profile_detail_buttons {
   display: flex;
   align-items: center;
-  margin: 20px 0;
+  margin-top: 20px;
 }
 /* profile end */
 .tabs_list_footer {
   list-style-type: none;
-  padding: 0;
-  margin: 50px 0;
   display: flex;
   flex-direction: column;
 }
@@ -175,10 +176,14 @@ body {
 }
 .tabs_list_footer li:last-child {
   border-top: 1px solid #edf0f7;
+  padding-top: 30px;
 }
 .tabs_list_footer li {
-  padding: 30px 0;
   color: #67748e;
+  padding: 10px;
+}
+.tabs_list_footer {
+  padding: 0 30px;
 }
 /* tabs content */
 .single_sales_icon img {
@@ -633,7 +638,13 @@ body {
   justify-content: center;
   align-items: center;
 }
-
+.editProfilePopup button {
+  background-color: #00d9f5;
+  color: #fff;
+  border-radius: 50px;
+  border: transparent;
+  padding: 20px;
+}
 .popupContent.editProfilePopup {
   background-color: white;
   padding: 20px;
@@ -672,4 +683,123 @@ body {
   margin-bottom: 20px;
   border: 1px solid #e1e7ff;
   border-radius: 50px;
+}
+.save_button_wrappers {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 20px 0;
+}
+.save_button_wrappers button {
+  color: #fff;
+  border: transparent;
+  border-radius: 50px;
+  padding: 20px 100px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+.save_button_wrappers img {
+  width: 15px;
+}
+.save_button_wrappers button:first-child {
+  background-color: #001f3e;
+}
+.save_button_wrappers button:last-child {
+  background-color: #00d9f5;
+}
+
+/* recent offers styles/ my offers tab */
+.recentOffers_card {
+  display: flex;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  flex: 1;
+  gap: 15px;
+  align-items: center;
+}
+.recentOffers_card_image img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.recentOffers_card_titles h5 {
+  font-size: 16px;
+  color: #001f3e;
+  font-weight: 600;
+}
+.offers_tab_recent_offer_wrap {
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 30px;
+}
+.recent_offers_cols {
+  background-color: #f7f8fd;
+  padding: 10px;
+  border-radius: 15px;
+  gap: 8px;
+  margin: 20px 0;
+}
+.recentOffers_card_details {
+  margin-left: auto;
+}
+.recentOffers_card p {
+  margin-bottom: 5px;
+  color: #67748e;
+}
+.recentOffers_card_titles svg {
+  width: 8px;
+  color: #00cd97;
+}
+.offers_card_customers p {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.recentOffers_card_titles .offer_status {
+  border-radius: 5px;
+  padding: 4px 10px;
+  font-size: 12px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.offer_status.pending {
+  background-color: #21dff754;
+  color: #21dff7;
+}
+.offer_status.pending svg {
+  color: #21dff7;
+}
+.offer_status.countered {
+  background-color: #00cd984a;
+  color: #00cd98;
+}
+.offer_status.countered svg {
+  color: #00cd98;
+}
+.recentOffers_card_details svg {
+  background-color: #f7f8fd;
+  padding: 10px;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+}
+.offer_status_cards .recentOffers_card_details {
+  display: flex;
+  gap: 10px;
+}
+/* offfer sections tabs */
+.offers_tab_offer_wrap {
+  background-color: #fff;
+  margin: 20px 0;
+}
+.offers_tab_offer_wrap .add_domain_media_setup_tile_wrapper {
+  border-bottom: 1px solid #edf0f7;
+  padding: 30px;
 }
