--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -7,6 +7,9 @@
 .ws_flex {
   display: flex;
 }
+.ph_30 {
+  padding: 0px 20px;
+}
 .ai_center {
   align-items: center;
 }
@@ -30,6 +33,9 @@ body {
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
+}
+.justify_space_between {
+  justify-content: space-between;
 }
 .tabs_lists,
 .tabContent {
@@ -743,6 +749,7 @@ body {
   border-radius: 15px;
   gap: 8px;
   margin: 20px 0;
+  flex-direction: column;
 }
 .recentOffers_card_details {
   margin-left: auto;
@@ -802,4 +809,205 @@ body {
 .offers_tab_offer_wrap .add_domain_media_setup_tile_wrapper {
   border-bottom: 1px solid #edf0f7;
   padding: 30px;
+}
+.offer_tabs_navs {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+  margin: 30px 0;
+}
+.offer_tabs_container {
+  margin: 30px 0;
+  padding: 0 30px;
+}
+.offer_tabs_navs li {
+  border: 1px solid #edf0f7;
+  border-radius: 25px;
+  padding: 12px 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+.offer_tabs_navs li img {
+  background-color: #f3f5fa;
+  padding: 5px;
+  border-radius: 50%;
+}
+.offer_tabs_navs li.active img {
+  background-color: #fff;
+}
+.offer_tabs_navs li.active {
+  background-color: #00d9f5;
+}
+.extra_column_wrapper {
+  margin-top: 10px;
+  overflow: hidden; /* Ensure that overflowing content is hidden */
+  max-height: 0; /* Start with max-height of 0 for smooth transition */
+  transition: max-height 0.3s ease-out; /* Transition for height change */
+}
+.extra_column {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.extra_column_wrapper.expanded {
+  max-height: 500px; /* Set this to a value that accommodates the content */
+}
+/* .offer_tabs_wrapper .recent_offers_cols {
+  flex-direction: column;
+} */
+.offerForm input[type="number"] {
+  border: 1px solid #e1e7ff;
+  padding: 15px;
+  border-radius: 50px;
+  width: 300px;
+}
+.offerForm {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  flex: 2;
+  justify-content: space-between;
+}
+.offerForm button[type="submit"] {
+  border: transparent;
+  background: #00d9f5;
+  padding: 6px;
+  border-radius: 50%;
+  position: absolute;
+  right: 5px;
+  top: 8px;
+}
+.offerForm button span {
+  color: #fff;
+  font-weight: 800;
+  font-size: 16px;
+}
+.offerForm button {
+  color: #fff;
+  padding: 10px 20px;
+  border: transparent;
+  border-radius: 50px;
+}
+.offerForm button.acceptButton {
+  background-color: #00224f;
+}
+.offerForm button.declineButton {
+  background-color: #00d9f5;
+}
+.offerForm .resetButton {
+  background-color: #fff;
+  padding: 10px 14px;
+}
+.extra_column_wrapper .recentOffers_card {
+  background-color: transparent;
+}
+.offer_tabs_wrapper .recent_offers_cols {
+  flex-direction: column;
+}
+.offerSorts {
+  display: flex;
+  gap: 10px;
+  padding: 10px 20px;
+  background-color: #edf0f7;
+  border-radius: 50px;
+}
+.offerSorts img {
+  width: 15px;
+  height: 15px;
+}
+.available_balance_card {
+  background: linear-gradient(
+    61deg,
+    rgb(5, 96, 220) 0%,
+    rgb(0, 69, 162) 40%,
+    rgb(35, 120, 235) 100%
+  );
+  color: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 30px 0;
+}
+.available_balance_card_shapes {
+  align-items: center;
+}
+.available_balance_card_shapes img:first-child {
+  width: 40px;
+}
+.available_balance_card_footer {
+  gap: 40px;
+  align-items: center;
+}
+.available_balance_card_footer button {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 50px;
+  border: transparent;
+  font-weight: 600;
+}
+.wallet_available_balance {
+  background: #fff;
+  padding: 30px;
+  border-radius: 20px;
+  border: 1px solid #edf0f7;
+  flex: 1;
+}
+.wallet_top_wrapper {
+  gap: 30px;
+}
+/* payment method */
+.paymentMethodcard_section {
+  display: flex;
+  gap: 20px;
+  margin: 30px 0;
+}
+.paymentMethodcard_section label {
+  border: 1px solid #edf0f7;
+  flex: 1;
+  border-radius: 10px;
+  padding: 40px 20px;
+  cursor: pointer;
+}
+.paymentMethodcard_section input {
+  display: none;
+}
+.paymentMethodcard_section .selected {
+  border: 1px solid #00d9f5;
+}
+.paymentMethodcard_section .card_content {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+  text-align: center;
+}
+.paymentMethodcard_section button {
+  background: transparent;
+  border: transparent;
+  border: 1px solid #edf0f7;
+  padding: 10px 20px;
+  border-radius: 20px;
+}
+.paymentMethodcard_section label p {
+  color: #67748e;
+  font-size: 12px;
+}
+.paymentMethodcard_section label img {
+  border-radius: 10px;
+}
+/* payment status */
+.payment_status_wrapper {
+  background-color: #fff;
+  margin: 30px 0;
+}
+.payment_status_wrapper .paymentStatus_title_wrapper {
+  border-bottom: 1px solid #e1e7ff;
+  padding: 30px;
+}
+.payment_status_wrapper .tab_content {
+  padding: 0 20px;
 }
