--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -65,6 +65,7 @@ body {
   background-color: #fff;
   padding: 0;
   padding: 10px 20px 10px 10px;
+  text-align: left;
 }
 
 .tabButton.active {
@@ -102,11 +103,11 @@ body {
 .mailNotifications p {
   background: #00daf6;
   color: #fff;
-  padding: 2px 7px;
+  padding: 2px 10px;
   border-radius: 50px;
   font-size: 14px;
   position: absolute;
-  top: -5px;
+  top: 0px;
   right: 5px;
 }
 .m_0 {
@@ -158,6 +159,8 @@ body {
   border: 1px solid #edf0f7;
   padding: 20px 32px;
   border-radius: 40px;
+  width: 84px;
+  height: 50px;
 }
 .profile_detail_buttons {
   display: flex;
@@ -228,7 +231,7 @@ body {
   background-color: #fff;
   padding: 15px 20px;
   display: flex;
-  gap: 60px;
+  gap: 40px;
   border: 1px solid #edf0f7;
   border-radius: 20px;
 }
@@ -794,8 +797,8 @@ body {
   background-color: #f7f8fd;
   padding: 10px;
   border-radius: 50%;
-  height: 20px;
-  width: 20px;
+  height: 40px;
+  width: 40px;
 }
 .offer_status_cards .recentOffers_card_details {
   display: flex;
@@ -873,7 +876,7 @@ body {
 .offerForm button[type="submit"] {
   border: transparent;
   background: #00d9f5;
-  padding: 6px;
+  padding: 6px 8px;
   border-radius: 50%;
   position: absolute;
   right: 5px;
