--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -160,7 +160,7 @@ body {
   padding: 20px 32px;
   border-radius: 40px;
   width: 84px;
-  height: 50px;
+  height: 60px;
 }
 .profile_detail_buttons {
   display: flex;
@@ -185,7 +185,7 @@ body {
 }
 .tabs_list_footer li:last-child {
   border-top: 1px solid #edf0f7;
-  padding-top: 30px;
+  padding: 30px 0;
 }
 .tabs_list_footer li {
   color: #67748e;
@@ -653,6 +653,7 @@ body {
   border-radius: 50px;
   border: transparent;
   padding: 20px;
+  border: 2px solid;
 }
 .popupContent.editProfilePopup {
   background-color: white;
@@ -662,7 +663,12 @@ body {
   max-height: 80%;
   overflow: auto;
 }
-
+.edit_password_wrapper {
+  margin-top: 25px;
+}
+.edit_password_wrapper h2 {
+  margin-bottom: 15px;
+}
 .closeIcon {
   position: absolute;
   top: 10px;
@@ -681,17 +687,20 @@ body {
   margin-top: 20px;
 }
 .editProfilePopup label {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
   gap: 10px;
   font-weight: 600;
 }
-.editProfilePopup input {
+.editProfilePopup input:not(input[type="file"]) {
   padding: 15px;
-  margin-bottom: 20px;
   border: 1px solid #e1e7ff;
   border-radius: 50px;
+}
+.editProfilePopup label span {
+  color: #888888;
+  font-weight: 500;
 }
 .save_button_wrappers {
   text-align: center;
@@ -719,7 +728,10 @@ body {
 .save_button_wrappers button:last-child {
   background-color: #00d9f5;
 }
-
+.hover-white:hover {
+  background-color: #fff;
+  color: #00d9f5;
+}
 /* recent offers styles/ my offers tab */
 .recentOffers_card {
   display: flex;
