--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -121,7 +121,9 @@ body {
 .dashboard_section_margin {
   margin: 80px 0;
 }
-
+.dashboard_small_margin {
+  margin: 30px 0;
+}
 .profileImage {
   width: 50px;
   height: 50px;
@@ -463,7 +465,7 @@ body {
   gap: 30px;
 }
 .domain_appraisal_wrapper {
-  flex: 3;
+  flex: 4;
   background-color: #fff;
   border-radius: 15px;
   padding: 30px;
@@ -518,7 +520,7 @@ body {
   padding-bottom: 20px;
 }
 .pricing_setup_wrapper {
-  flex: 1;
+  flex: 2;
   background-color: #fff;
   border-radius: 15px;
 }
@@ -528,6 +530,7 @@ body {
   padding: 10px;
   border: 1px solid rgb(237, 240, 247);
   border-radius: 50px;
+  max-width: 100%;
   width: 100%;
 }
 .input_group p {
@@ -548,7 +551,7 @@ body {
   justify-content: space-between;
 }
 .input_group {
-  margin-top: 20px;
+  margin-top: 10px;
   border-bottom: 1px solid rgb(237, 240, 247);
   padding: 20px;
 }
@@ -707,7 +710,7 @@ body {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin: 20px 0;
+  margin-bottom: 20px;
 }
 .save_button_wrappers button {
   color: #fff;
@@ -721,16 +724,30 @@ body {
 }
 .save_button_wrappers img {
   width: 15px;
+  padding: 3px;
 }
 .save_button_wrappers button:first-child {
   background-color: #001f3e;
+  border: 1px solid;
+}
+.save_button_wrappers button:first-child img {
+  background-color: #001f3e;
+}
+.save_button_wrappers button:last-child img {
+  background-color: #00d9f5;
 }
 .save_button_wrappers button:last-child {
   background-color: #00d9f5;
+  border: 1px solid;
 }
-.hover-white:hover {
-  background-color: #fff;
+.hover_white:hover {
+  background-color: #fff !important;
   color: #00d9f5;
+}
+.hover_white_dark:hover {
+  background-color: #fff !important;
+  border: 1px solid #001f3e;
+  color: #001f3e;
 }
 /* recent offers styles/ my offers tab */
 .recentOffers_card {
@@ -888,7 +905,7 @@ body {
 .offerForm button[type="submit"] {
   border: transparent;
   background: #00d9f5;
-  padding: 6px 8px;
+  padding: 6px 10px;
   border-radius: 50%;
   position: absolute;
   right: 5px;
@@ -927,6 +944,7 @@ body {
   padding: 10px 20px;
   background-color: #edf0f7;
   border-radius: 50px;
+  align-items: center;
 }
 .offerSorts img {
   width: 15px;
@@ -956,6 +974,12 @@ body {
 .available_balance_card_footer {
   gap: 40px;
   align-items: center;
+}
+.available_balance_card h6 {
+  color: #9b9b9b;
+}
+.available_balance_card h5 {
+  font-size: 14px;
 }
 .available_balance_card_footer button {
   background-color: #fff;
@@ -992,6 +1016,17 @@ body {
 }
 .paymentMethodcard_section .selected {
   border: 1px solid #00d9f5;
+  position: relative;
+}
+.paymentMethodcard_section svg {
+  color: #00d9f5;
+  width: 20px;
+  height: 20px;
+}
+.paymentMethodcard_section .check_icon {
+  position: absolute;
+  right: 10px;
+  top: 10px;
 }
 .paymentMethodcard_section .card_content {
   display: flex;
@@ -1006,6 +1041,7 @@ body {
   border: 1px solid #edf0f7;
   padding: 10px 20px;
   border-radius: 20px;
+  cursor: pointer;
 }
 .paymentMethodcard_section label p {
   color: #67748e;
