header menu tabs  links

--- a/src/components/CardSelector/CardSelector.module.css
+++ b/src/components/CardSelector/CardSelector.module.css
@@ -71,6 +71,7 @@
 .cardContent h5 {
   color: #00214c;
   font-weight: 400;
+  font-size: 14px;
 }
 .cardSelectorWrapper .icon img {
   width: 30px;
