--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -159,7 +159,7 @@ body {
   margin-left: 20px;
   color: #999999;
   border: 1px solid #edf0f7;
-  padding: 20px 32px;
+  padding: 12px 32px;
   border-radius: 40px;
   width: 84px;
   height: 60px;
@@ -267,15 +267,15 @@ body {
   border-radius: 50px;
   background-color: #00214c;
   color: #fff;
-  border: transparent;
+  border: 1px solid;
   padding: 15px 20px;
   position: absolute;
-  right: 30px;
+  right: 40px;
   top: 50%;
   transform: translate(-50%, -50%);
 }
 .add_domain_wrapper {
-  max-width: 850px;
+  max-width: 950px;
   width: 100%;
   margin: auto;
   text-align: center;
@@ -436,9 +436,12 @@ body {
 }
 .pronounc_add svg {
   background: #fff;
-  padding: 10px;
+  /* padding: 10px; */
   border-radius: 50%;
   color: #00214c;
+  height: 15px;
+  width: 15px;
+  padding: 0;
 }
 .pronounc_add.active {
   border: 1px solid rgb(118, 232, 249);
@@ -602,7 +605,7 @@ body {
   padding: 30px 20px;
 }
 .date_fields_wrapper {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 .date_fields_wrapper input {
   width: auto;
@@ -612,7 +615,7 @@ body {
   font-size: 13px;
 }
 .toggle_section {
-  padding: 20px;
+  padding: 30px 20px;
   border-bottom: 1px solid rgb(237, 240, 247);
   justify-content: space-between;
 }
@@ -1065,6 +1068,7 @@ body {
 }
 .payment_status_wrapper .tab_content {
   padding: 0 20px;
+  padding-bottom: 20px;
 }
 /* my orders popup */
 /* Modal overlay */
