--- a/src/components/CardSelector/CardSelector.module.css
+++ b/src/components/CardSelector/CardSelector.module.css
@@ -114,7 +114,7 @@
 .cardSelector_aiPicks {
   display: flex;
   align-items: center;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 .description_tags_wrapper {
   background-color: rgb(247, 249, 253);
@@ -123,7 +123,7 @@
 .tagsItemsCards .cardContent {
   flex-direction: row;
   align-items: center;
-  background-color: rgb(247, 249, 253);
+  /* background-color: rgb(247, 249, 253); */
   border-radius: 50px;
   padding: 10px;
   gap: 15px;
