--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -86,7 +86,7 @@ body.page-id-5782 {
 .profileSection {
   /* display: flex; */
   align-items: center;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   padding: 30px;
 }
 .profileDetails {
@@ -166,7 +166,7 @@ body.page-id-5782 {
   padding: 12px 32px;
   border-radius: 40px;
   width: 84px;
-  height: 60px;
+  height: 55px;
 }
 .profile_detail_buttons {
   display: flex;
@@ -242,7 +242,7 @@ button.button_icon_wrapper:hover {
 .sellerCentralInnerTabs {
   width: 100%;
   background-color: #fff;
-  padding: 15px 20px;
+  padding: 10px 20px;
   display: flex;
   gap: 40px;
   border: 1px solid #edf0f7;
@@ -530,6 +530,7 @@ button.button_icon_wrapper:hover {
 }
 .domain_appraisal_body_cards h5 {
   color: #00224f;
+  font-weight: 500;
 }
 .domain_appraisal_body_cards p {
   color: #67748e;
@@ -656,6 +657,15 @@ button.button_icon_wrapper:hover {
 .remove_image {
   background-color: transparent;
   border: transparent;
+}
+.domain_description_wrapper .domain_description_titles a {
+  background: linear-gradient(-69deg, #01d5f6, #2164ff 95%, #02d3f6);
+  color: #fff;
+  border-radius: 50px;
+  align-items: center;
+  display: flex;
+  gap: 5px;
+  padding: 10px 40px;
 }
 
 /* edit profile popup */
