--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -128,12 +128,12 @@ body.page-id-5782 {
 .mailNotifications p {
   background: #00daf6;
   color: #fff;
-  padding: 2px 10px;
+  padding: 0px 8px;
   border-radius: 50px;
   font-size: 14px;
   position: absolute;
   top: 0px;
-  right: 5px;
+  right: 0px;
 }
 .m_0 {
   margin: 0;
@@ -175,7 +175,7 @@ body.page-id-5782 {
 
 .editProfileButton {
   /* padding: 12px 20px 12px 10px; */
-  padding: 20px;
+  padding: 12px 20px;
   background-color: #fff;
   border: none;
   border-radius: 40px;
@@ -187,10 +187,17 @@ body.page-id-5782 {
   margin-left: 20px;
   color: #999999;
   border: 1px solid #edf0f7;
-  padding: 12px 32px;
+  padding: 20px 40px;
   border-radius: 40px;
-  width: 84px;
-  height: 55px;
+  /* width: 84px; */
+  /* height: 55px; */
+  display: flex;
+}
+.mailIcon:hover {
+  background-color: #00d9f5;
+}
+.mailIcon:hover path {
+  fill: #fff !important;
 }
 .profile_detail_buttons {
   display: flex;
@@ -208,6 +215,7 @@ body.page-id-5782 {
   gap: 15px;
   align-items: center;
   font-weight: 400;
+  font-size: 14px;
 }
 .button_icon_wrapper svg {
   width: 20px;
@@ -1414,4 +1422,54 @@ button.active svg path {
   width: calc(50% - 10px);
   gap: 15px;
   justify-content: space-between;
+}
+
+/* responsive */
+@media (max-width: 767px) {
+  .fd_column {
+    flex-direction: column;
+  }
+  .f_wrap {
+    flex-wrap: wrap;
+  }
+  .sellerCentralInnerTabs
+    label:not(.sellerCentralInnerTabs button:first-child label),
+  .offer_tabs_wrapper label,
+  .offers_tab_recent_offer_wrap label {
+    display: none; /* Hide all labels on mobile screens */
+  }
+
+  .sellerCentralInnerTabs .specialTabLabel {
+    display: block;
+  }
+  .sellerCentralInnerTabs {
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+  }
+  .sellerCentralInnerTabs
+    .button_icon_wrapper:not(.sellerCentralInnerTabs button:first-child) {
+    padding: 0;
+  }
+  .sellerCentralInnerTabs button:first-child {
+    width: 100%;
+    order: 2;
+    margin-top: 10px;
+  }
+  .wallet_top_wrapper {
+    flex-direction: column;
+  }
+  .offer_tabs_navs li {
+    padding: 10px;
+  }
+  .offer_tabs_navs {
+    gap: 10px;
+  }
+  .available_balance_card_footer div:last-child,
+  .available_balance_card_footer div:last-child button {
+    width: 100%;
+  }
+  .offerSorts {
+    padding: 10px;
+  }
 }
