--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -29,6 +29,9 @@ svg {
   height: 20px;
   width: 20px;
 }
+svg path {
+  filter: none !important;
+}
 .status .pending {
   color: rgb(245, 185, 3);
 }
@@ -46,6 +49,11 @@ svg {
   padding: 3px;
   width: fit-content;
   display: flex;
+}
+.hover_blue_white:hover {
+  background-color: #fff;
+  border: 1px solid #00d9f5;
+  color: #00d9f5;
 }
 /* body.page-id-5284 {
   background-color: #f9fbfe;
@@ -73,7 +81,7 @@ body.page-id-5782 {
 }
 .tabLabels {
   display: flex;
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
   flex-direction: column;
   align-items: self-start;
   gap: 15px;
@@ -192,12 +200,13 @@ body.page-id-5782 {
   /* width: 84px; */
   /* height: 55px; */
   display: flex;
+  cursor: pointer;
 }
 .mailIcon:hover {
   background-color: #00d9f5;
 }
 .mailIcon:hover path {
-  fill: #fff !important;
+  fill: #000 !important;
 }
 .profile_detail_buttons {
   display: flex;
@@ -240,11 +249,11 @@ button.active svg path {
 }
 .tabs_list_footer li:last-child {
   border-top: 1px solid #edf0f7;
-  padding: 30px 10px;
+  padding: 30px 0px;
 }
 .tabs_list_footer li {
   color: #67748e;
-  padding: 10px;
+  /* padding: 10px; */
   padding-bottom: 30px;
 }
 .tabs_list_footer li img {
@@ -556,11 +565,12 @@ button.active svg path {
   border-radius: 15px;
   padding: 30px;
 }
-.add_domain_domain_appraisal_tile_wrapper svg {
+.add_domain_domain_appraisal_tile_wrapper svg:last-child {
   margin-left: auto;
   color: #67738d;
   height: 24px;
   width: 24px;
+  cursor: pointer;
 }
 .domain_appraisal_inner_wrapper {
   border: 1px solid rgb(237, 240, 247);
@@ -583,9 +593,9 @@ button.active svg path {
     rgb(33, 100, 255) 100%
   );
   color: #fff;
-  padding: 5px;
+  padding: 5px 12px;
   border-radius: 20px;
-  margin-right: 10px;
+  margin-right: 5px;
 }
 .domain_appraisal_inner_wrapper_heading h3 span {
   color: #999999;
@@ -662,7 +672,7 @@ button.active svg path {
 }
 .toggle_indicator svg {
   position: absolute;
-  top: 2px;
+  top: 0px;
   width: 20px;
   color: #00d9f5;
 }
@@ -724,8 +734,9 @@ button.active svg path {
   background-color: transparent;
   border: transparent;
 }
-.domain_description_wrapper .domain_description_titles a {
+/* .domain_description_wrapper .domain_description_titles a {
   background: linear-gradient(-69deg, #01d5f6, #2164ff 95%, #02d3f6);
+  background: linear-gradient(90deg, #01d5f6, #2164ff, #02d3f6);
   color: #fff;
   border-radius: 50px;
   align-items: center;
@@ -733,6 +744,32 @@ button.active svg path {
   gap: 5px;
   padding: 10px 40px;
   font-size: 14px;
+} */
+.domain_description_wrapper .domain_description_titles a {
+  background: linear-gradient(90deg, #01d5f6, #2164ff, #02d3f6);
+  background-size: 300% 100%; /* Makes the gradient wider for animation */
+  color: #fff;
+  border-radius: 50px;
+  align-items: center;
+  display: flex;
+  gap: 5px;
+  padding: 10px 40px;
+  font-size: 14px;
+  transition: background 0.1s ease; /* Smooth transition for the hover effect */
+}
+
+.gradient_hover:hover {
+  animation: gradientMove 3s linear infinite; /* Start the gradient animation */
+  background-size: 300% 100%; /* Ensures the gradient has enough width */
+}
+
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
 }
 
 /* edit profile popup */
@@ -810,6 +847,9 @@ button.active svg path {
   gap: 20px;
   margin-bottom: 20px;
 }
+.save_button_wrappers svg path {
+  fill: #fff;
+}
 .save_button_wrappers button {
   color: #fff;
   border: transparent;
@@ -819,7 +859,7 @@ button.active svg path {
   align-items: flex-start;
   gap: 10px;
   cursor: pointer;
-  font-weight: 400;
+  font-weight: 500;
   justify-content: center;
   width: fit-content;
   margin-top: 30px;
@@ -832,11 +872,20 @@ button.active svg path {
   background-color: #001f3e;
   border: 1px solid;
 }
-.save_button_wrappers button:first-child img {
+/* .save_button_wrappers button:first-child img {
   background-color: #001f3e;
 }
 .save_button_wrappers button:last-child img {
   background-color: #00d9f5;
+} */
+.save_button_wrappers button svg path {
+  fill: #fff !important;
+}
+.save_button_wrappers button:first-child:hover svg path {
+  fill: #001f3e !important;
+}
+.save_button_wrappers button:last-child:hover svg path {
+  fill: #00d9f5 !important;
 }
 .save_button_wrappers button:last-child {
   background-color: #00d9f5;
@@ -1330,18 +1379,41 @@ button.active svg path {
   /* background-color: #f1f1f1; */
 }
 
-.my_orders_table tbody tr td button {
+.my_orders_details_table button {
   background-color: #00d9f5;
   color: white;
   border: none;
   /* padding: 8px 24px; */
-  padding: 12px;
+  padding: 12px 24px;
   text-align: center;
   font-size: 14px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  border-radius: 20px;
+  border-radius: 40px;
   border: 1px solid;
+}
+.my_orders_details_table .recentOffers_card {
+  background-color: #fff;
+  justify-content: space-between;
+}
+.my_orders_details_table .offer_status {
+  padding: 0;
+  font-weight: 500;
+  font-size: 16px;
+}
+.my_orders_details_table h5 {
+  font-weight: 500;
+  font-size: 16px;
+}
+.my_orders_details_table .recentOffers_card:first-child {
+  flex: 1;
+}
+.my_orders_details_table .recentOffers_card:last-child {
+  flex: 2;
+}
+.my_orders_details_table .recentOffers_wrapper {
+  display: flex;
+  gap: 10px;
 }
 /* sales deatils */
 .sales_first_column_wrapper div {
