--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -231,7 +231,7 @@ body.page-id-5782 {
   width: 20px;
   height: 20px;
 }
-button.button_icon_wrapper:hover {
+.button_icon_wrapper:hover {
   background-color: #00d9f5;
   /* font-weight: 600; */
   text-shadow: 0 0 0.45px #000, 0 0 0.45px #000;
@@ -241,6 +241,9 @@ button.button_icon_wrapper:hover {
 button.button_icon_wrapper:hover svg path,
 button.active svg path {
   fill: #00d9f5 !important;
+}
+.tabsLogout {
+  width: fit-content;
 }
 .button_icon_wrapper .svg_bg_white {
   background-color: #f3f5fa;
@@ -690,7 +693,7 @@ button.active svg path {
 }
 .toggle_indicator svg {
   position: absolute;
-  top: 0px;
+  top: 1px;
   width: 20px;
   color: #00d9f5;
 }
@@ -1269,6 +1272,7 @@ button.active svg path {
 .paymentMethodcard_section label p {
   color: #67748e;
   font-size: 12px;
+  margin: 10px 0;
 }
 .paymentMethodcard_section label img {
   border-radius: 10px;
@@ -1277,6 +1281,7 @@ button.active svg path {
 .payment_status_wrapper {
   background-color: #fff;
   margin: 30px 0;
+  border-radius: 20px;
 }
 .payment_status_wrapper .paymentStatus_title_wrapper {
   border-bottom: 1px solid #e1e7ff;
@@ -1532,7 +1537,13 @@ button.active svg path {
   gap: 15px;
   justify-content: space-between;
 }
-
+.domain_appraisal_body_card svg {
+  height: 120px;
+  width: 120px;
+}
+.domain_appraisal_body_card svg text {
+  font-size: 14px;
+}
 /* delete popup */
 .popupOverlay {
   position: fixed;
